--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,24 @@
   box-sizing: border-box;
 }
 
-img {
-  max-width: 100%;
-  height: auto;
+nav img {
+  max-height: 100%;
+  max-width: auto;
+  vertical-align: middle;
+}
+
+.loghi-esterni{
+  text-align: center;
+}
+
+.loghi-esterni img{
+  max-height: 80px;
+  max-width: 160px;
 }
 
 /* regole di debug */
 [class*="col-"] {
-  min-height: 100px;
+  /* min-height: 100px; */
   background-color: lightgreen;
   border: solid 1px  #000;
   padding: 2px;
@@ -49,19 +59,17 @@ header .navbar {
   margin-bottom: 0;
 }
 
-
-
 .navbar-brand {
 
 }
 
-#logonav {
 
-  max-height: 200%;
+#logonav {
+  max-height: 100%;
 }
 
 #navbar-nav-center {
-  margin-left: 15%;
+  /* margin-left: 15%; */
 }
 
 
@@ -72,3 +80,27 @@ header {
 
 
 /* form nel jumbotron */
+
+/* section2 */
+
+.sec2menu {
+  border-left: 1px solid grey;
+}
+
+
+.section6 container {
+  min-height: 500px;
+}
+
+.carousel-indicators {
+  bottom:-50px;
+}
+
+.carousel-inner {
+  margin-bottom: 60px;
+}
+
+
+.carousel-control {
+
+}
