--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,9 @@ nav img {
 /* regole di debug */
 [class*="col-"] {
   /* min-height: 100px; */
-  background-color: lightgreen;
+  /* background-color: lightgreen;
   border: solid 1px  #000;
-  padding: 2px;
+  padding: 2px; */
 }
 
 /* .row .col-6 div  */
@@ -78,19 +78,42 @@ header {
   background-image: url(../img/bg-home-hero-3.svg);
 }
 
+.jumbo-form {
+  background-color: white;
+}
 
-/* form nel jumbotron */
+/* section1 */
+.section1 {
+  background-color: #F3F5F9;
+}
 
 /* section2 */
 
 .sec2menu {
   border-left: 1px solid grey;
 }
-
-
-.section6 container {
-  min-height: 500px;
+/* section3 */
+.section3 {
+  background-color: #F3F5F9;
 }
+
+/* section5 */
+.section5 {
+  background-color: #0032AE;
+}
+
+.section5 .row {
+  border-bottom: 1px solid white;
+}
+
+ .s5nobottom {
+   border-bottom: none !important;
+ }
+
+/* sezione6 */
+
+
+
 
 .carousel-indicators {
   bottom:-50px;
@@ -105,11 +128,18 @@ header {
 
 }
 
+/* section7 */
+.section7 {
+  background-color: #0032AE;
+  min-height: 100px;
+}
+
 
 
 
 /* footer */
-.footer-icons {
+footer {
+  background-color: #031C4E;
 
 }
 
