--- a/css/style.css
+++ b/css/style.css
@@ -51,15 +51,24 @@ nav img {
 
 /* NAVBAR */
 
-.helper {
-
+/* da il colore ai 3 trattini dell'hamburgher menu */
+.navbar-inverse .navbar-toggle .icon-bar {
+  background-color: #004AFF;
 }
+
+/* toglie il bordo dal hamb menu */
+.navbar-inverse .navbar-toggle {
+  border: none;
+}
+
+
 .navbar {
   border-radius: 0px;
 }
 
+/* colore del testo della navbar */
 .navbar-inverse .navbar-nav > li > a {
-  color: #051E4F;
+  color: #051E4F;   /* un blu scuro */
 }
 
 .navbar-inverse {
@@ -71,10 +80,6 @@ header .navbar {
   margin-bottom: 0;
 }
 
-.navbar-brand {
-
-}
-
 .navbar-nav {
   margin-left: 50px;
 }
@@ -82,10 +87,6 @@ header .navbar {
 
 #logonav {
   max-height: 100%;
-}
-
-#navbar-nav-center {
-  /* margin-left: 15%; */
 }
 
 
@@ -135,7 +136,7 @@ header {
 /* sezione6 */
 
 
-
+/* carosello, comune a ezione 3 e 6 */
 
 .carousel-indicators {
   bottom:-50px;
@@ -149,7 +150,7 @@ header {
 .carousel-control {
 
 }
-
+/* fine caroselli comuni */
 /* section7 */
 .section7 {
   background-color: #0032AE;
@@ -215,4 +216,44 @@ footer {
 .footer-list li a:hover {
   background-color: #555;
   color: white;
+}
+
+
+/* MEDIAQUERY */
+/* sistema il menu hamburgher */
+@media (max-width: 1200px) {
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left,.navbar-right {
+      float: none !important;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in{
+      display:block !important;
+  }
 }
