--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ nav img {
 
 .loghi-esterni img{
   max-height: 80px;
-  max-width: 160px;
+  max-width: 200px;
 }
 
 /* regole di debug */
@@ -43,7 +43,41 @@ nav img {
 } */
 /* regole corpo pagina */
 
+.center {
+  text-align: center;
+}
 
+.white {
+  color: white;
+}
+
+.grey {
+  color: grey;
+}
+
+.blueacceso {
+  color: #006AFF;
+}
+
+.bluscuro {
+  color: #051E4F;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+h1 {
+  font-weight: bold;
+}
+
+h3 {
+  font-weight: bold;
+}
+
+.padbott {
+  padding-bottom: 5%;
+}
 
 .centratura-page {
   padding: 0 10%;
@@ -97,8 +131,14 @@ header {
 
 .jumbo-form {
   background-color: white;
+  padding: 5%;
+  border-radius: 1%;
 }
 
+.jumbo-container {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
 
 .jumbo form img {
   height: 14px;
@@ -106,23 +146,50 @@ header {
 /* section1 */
 .section1 {
   background-color: #F3F5F9;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+.s1title {
+  font-size: 15;
+  font-weight: bold;
+  color: grey;
 }
 
 
 
 /* section2 */
+.section2 {
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+
 
 .sec2menu {
   border-left: 1px solid grey;
+  padding-left: 5%;
+  line-height: 2;
 }
 /* section3 */
 .section3 {
   background-color: #F3F5F9;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+/* section4 */
+.section4 {
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 /* section5 */
 .section5 {
   background-color: #0032AE;
+  padding-top: 5%;
+  padding-bottom: 5%;
+
 }
 
 .section5 .row {
@@ -133,7 +200,11 @@ header {
    border-bottom: none !important;
  }
 
-/* sezione6 */
+ /* section6 */
+ .section6 {
+   padding-top: 5%;
+   padding-bottom: 5%;
+ }
 
 
 /* carosello, comune a ezione 3 e 6 */
@@ -146,16 +217,27 @@ header {
   margin-bottom: 60px;
 }
 
+.carousel-indicators .active {
+  background-color: #006AFF;
+}
+
+.carousel-indicators li {
+  border-color: #006AFF;
+}
+
 
 .carousel-control {
 
 }
 /* fine caroselli comuni */
+
 /* section7 */
 .section7 {
   background-color: #0032AE;
   min-height: 100px;
   text-align: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 
@@ -202,7 +284,6 @@ footer {
   margin: 0;
   padding: 0;
   /* width: 200px; */
-
 }
 
 .footer-list li a {
@@ -219,7 +300,11 @@ footer {
 }
 
 
-/* MEDIAQUERY */
+
+
+
+
+
 /* sistema il menu hamburgher */
 @media (max-width: 1200px) {
   .navbar-header {
@@ -257,3 +342,11 @@ footer {
       display:block !important;
   }
 }
+
+/* MEDIAQUERY */
+
+/* regole per display MD */
+@media all and (min-width: 992px) and (max-width: 1199px){
+
+/* regole per display LG */
+@media all and (min-width: 1200px){
